[metadata]
name = countries
version = 1.0.0
url = http://someurl.ir
license = BSD-3-Clause
maintainer = Pallets
maintainer_email = sinaesmaili216@gmail.com
description = Show countries information
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    countries
